syntax = "proto3" ; 
option csharp_namespace = "Basket.API"; 

service StockService{
    rpc GetStock(StockRequest) returns (StockResponse);
}

message StockRequest{
    string itemNo = 1 ; 
}

message StockResponse{
    int32 quantity = 1 ; 
}